<resources>
    <string name="app_name" translatable="false">Tarea 3</string>
    <string name="default_web_client_id" translatable="false">webClientId.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="listaPokemon">LISTADO DE POKEMON</string>
    <string name="listaPokedex">LISTADO TODOS LOS POKEMON</string>
    <string name="CerrarSesion">Cerrar Sesión</string>
    <string name="eliminar_pokemon">Eliminar Pokemon</string>-
    <string name="textcontraseña">Contraseña</string>
    <string name="contraseña">Introducca su Contraseña</string>
    <string name="registro">Registrarse</string>
    <string name="email">Introducca su Email</string>
    <string name="acceder">Acceder</string>
    <string name="opcion_eliminar">Debe activar la opción eliminar pokemon en Setting</string>
    <string name="idioma_aplicacion">Elige el Idioma de la aplicación</string>
    <string name="altura">Altura:</string>
    <string name="peso">Peso:</string>
    <string name="Tipos">Tipos</string>
    <string name="ya_capturado">Este pokemon ya está capturado</string>
    <string name="capturado">CAPTURADO</string>
    <string name="sin_capturar">No se ha podido capturar</string>
    <string name="idioma_ingles">ENGLISH</string>
    <string name="idioma_castellano">SPANISH</string>
    <string name="acercade">Acerca de ...</string>
    <string name="elegir_opcion">Seguro que desea eliminar este pokemon</string>
    <string name="opcion_title">Eliminar Pokemon</string>
    <string name="borrar">Borrar</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="msg_acercade" translatable="false">MANUEL PEREZ MOLINA\nV. 1.0</string>
    <string name="msg_CerrarSesion">Seguro que quiere cerrar la sesion</string>
    <string name="Pokemon_capturados">Pokemon Capturados</string>
    <string name="Pokedex" translatable="false">Pokedex</string>
    <string name="Ajustes">Ajustes</string>
</resources>