<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">



<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingTop="20dp"
    tools:context=".fragment.Setting">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/eliPok"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentRight="false"
        android:gravity="left"
        android:text="@string/eliminar_pokemon"
        android:textSize="30dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/acercade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acercade"
        android:gravity="left"
        android:textSize="30dp"
        android:layout_below="@+id/eliPok"
        android:layout_marginTop="10dp"/>



    <LinearLayout
        android:id="@+id/llayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/acercade"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/idioma_aplicacion"
            android:textSize="25dp"/>

        <Button
            android:id="@+id/English"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/idioma_ingles"
            android:textSize="30dp" />

        <Button
            android:id="@+id/Castellano"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/idioma_castellano"
            android:textSize="30dp" />


    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Closed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/llayout"
        android:layout_marginStart="25dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="cursive"
        android:text="@string/CerrarSesion"
        android:textColor="#FF5722"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="555dp" />

</RelativeLayout>

</ScrollView>


